--- a/src/styles/blocks.scss/menu.scss
+++ b/src/styles/blocks.scss/menu.scss
@@ -68,6 +68,8 @@
 }
 
 .nav__item {
+  @include hover(transform, scale(1.07));
+
   margin-bottom: 30px;
 
   @include on-mob-tabl {
@@ -124,6 +126,10 @@
 
   &__content {
     margin-top: -50px;
+
+    @include on-tabl-desk {
+      margin-top: 1px;
+    }
 
     @include on-mob-tabl {
       font-size: 16px;
@@ -205,10 +211,6 @@
     &--c2 {
       float: left;
 
-      @include on-tabl-desk {
-        margin-left: 42px;
-      }
-
       @include on-mob-tabl {
         position: relative;
         left: -50px;
@@ -239,7 +241,7 @@
     @include on-tabl-desk {
       width: 270px;
       height: 145px;
-      position: relative;
+
       left: 40px;
       top: -5px;
     }
