--- a/src/styles/blocks.scss/header.scss
+++ b/src/styles/blocks.scss/header.scss
@@ -1,4 +1,4 @@
-.scale {
+.scale000 {
   @include on-desktop {
     margin: 0 auto;
     padding: 0 55px;
@@ -6,12 +6,12 @@
   }
 }
 
-.scale1 {
+.scale1000 {
   margin: 0 auto;
   max-width: 1280px;
 }
 
-.scale2 {
+.scale2000 {
   @include on-desktop {
     // margin-left: auto;
     // margin-right: auto;
@@ -29,7 +29,8 @@
   // height: 100vh;
   @include on-desktop {
     margin: 0 auto;
-    max-width: 1280px;
+
+    // max-width: 1280px;
     position: relative;
     display: grid;
     column-gap: 30px;
@@ -54,12 +55,12 @@
   }
 
   &__pict {
-    width: 725px;
-    height: 655px;
+    width: 100%;
+    max-height: 100vh;
     background-image: url(../images/header.png);
     background-size: cover;
     background-position: center;
-    grid-column: 6/13;
+    grid-column: 6/-1;
 
     @include on-tabl-desk {
       width: 374px;
@@ -73,7 +74,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      width: 100%;
+      min-width: 100%;
       height: 300px;
     }
   }
@@ -174,6 +175,8 @@
     }
   }
   &--ticket {
+    @include hover(transform, scale(1.07));
+
     max-width: 269px;
     height: 70px;
 
