--- a/src/styles/blocks.scss/mains.scss
+++ b/src/styles/blocks.scss/mains.scss
@@ -444,6 +444,8 @@
   width: 70px;
   height: 70px;
 
+  @include hover(transform, scale(1.07));
+
   @include on-mob-tabl {
     width: 50px;
     height: 50px;
