--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import './utils/blocks/schedule';
 @import './utils/blocks/performances';
 @import './utils/blocks/panorama';
+@import './utils/blocks/gallery';
 
 * {
   margin: 0;
