--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -16,3 +16,31 @@
     @content;
   }
 }
+
+@mixin section-title {
+  font-size: 48px;
+  line-height: 48px;
+  margin-bottom: 56px;
+
+  @include on-tablet {
+    margin-bottom: 48px;
+  }
+
+  @include on-phone {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 40px;
+  }
+}
+
+@mixin height-aside-menu($_property) {
+  #{$_property}: $d-aside-height;
+
+  @include on-tablet {
+    #{$_property}: $t-aside-height;
+  }
+
+  @include on-phone {
+    #{$_property}: $m-aside-height;
+  }
+}
