--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,7 +4,7 @@ $g-color: #1a5a4c;
 $grey-color: #687480;
 $max-content: 1440px;
 $t-max-width: 1279px;
-$m-max-width: 768px;
+$m-max-width: 767px;
 $max-content-width: 1440px;
 $d-columns: 12;
 $t-columns: 6;
@@ -29,3 +29,4 @@ $green-text: #1a5a4c;
 $rect-back: #f14a27;
 $details-text-color: #4e4e4e;
 $box-shadow-color: #1a5a4c40;
+$btn-no-active: #E0E0E0;
