--- a/src/styles/utils/blocks/panorama.scss
+++ b/src/styles/utils/blocks/panorama.scss
@@ -5,7 +5,7 @@
     background-position: center center;
     background-size: cover;
     max-width: 100%;
-    height: 550px;
+    aspect-ratio: 3 / 1;
   }
 
   &__description {
@@ -56,11 +56,7 @@
 
 @include on-tablet {
   .panorama {
-    padding-inline: $t-padding;
-
-    &__bg {
-      height: 390px;
-    }
+    margin-inline: $t-padding;
 
     &__description {
       margin-top: -84px;
@@ -71,9 +67,10 @@
 
 @include on-phone {
   .panorama {
-    padding-inline: $m-padding-no-space;
+    margin-inline: $m-padding-no-space;
     &__bg {
       height: 210px;
+      aspect-ratio: auto;
     }
 
     &__container {
