--- a/src/styles/utils/blocks/performances.scss
+++ b/src/styles/utils/blocks/performances.scss
@@ -1,8 +1,6 @@
 .performances {
   &__title {
-    font-size: 48px;
-    line-height: 48px;
-    margin-bottom: 56px;
+    @include section-title;
   }
 
   &__container {
@@ -73,10 +71,6 @@
       margin-bottom: 64px;
     }
 
-    &__title {
-      margin-bottom: 48px;
-    }
-
     &__image {
       margin-bottom: 40px;
       grid-column: 1 / -1;
@@ -99,9 +93,6 @@
 
     &__title {
       text-align: center;
-      font-size: 36px;
-      line-height: 36px;
-      margin-bottom: 40px;
     }
 
     &__image {
