--- a/src/styles/utils/blocks/gallery.scss
+++ b/src/styles/utils/blocks/gallery.scss
@@ -39,10 +39,6 @@
     gap: 22px;
   }
 
-  &__controll-wrap-btn {
-
-  }
-
   &__controls-btn {
     position: relative;
     width: 9px;
@@ -56,10 +52,7 @@
     &::before {
       content: '';
       position: absolute;
-      top: -5px;
-      right: -5px;
-      bottom: -5px;
-      left: -5px;
+      inset: -5px;
       background: transparent;
     }
   }
