--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -29,4 +29,4 @@ $green-text: #1a5a4c;
 $rect-back: #f14a27;
 $details-text-color: #4e4e4e;
 $box-shadow-color: #1a5a4c40;
-$btn-no-active: #E0E0E0;
+$btn-no-active: #e0e0e0;
