--- a/src/styles/blocks.scss/header.scss
+++ b/src/styles/blocks.scss/header.scss
@@ -158,7 +158,7 @@
     @include on-mob-tabl {
       position: absolute;
       top: 0;
-      margin: 433px 20%;
+      margin: 433px 15%;
     }
 
     @include on-tabl-desk {
@@ -187,10 +187,9 @@
     }
 
     @include on-mob-tabl {
-      width: 100vh;
+      width: 260px;
       height: 50px;
       position: relative;
-      left: 0%;
     }
   }
 
@@ -267,7 +266,7 @@
     }
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.6);
     }
   }
 
