--- a/src/styles/blocks.scss/mains.scss
+++ b/src/styles/blocks.scss/mains.scss
@@ -261,7 +261,7 @@
       line-height: 36px;
       width: 280px;
       height: 110px;
-      left: 15%;
+      left: 10%;
       top: 88px;
     }
 
@@ -438,6 +438,7 @@
 }
 
 .search-form__button {
+  border: none;
   background-image: url(../images/Group\ 57.png);
   background-size: cover;
   background-position: center;
