--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,11 +1,6 @@
-
 .page {
   scroll-behavior: smooth;
   font-size: 16px;
-
-  &:has(.page__menu__open) {
-    overflow: hidden;
-  }
 
   &__body {
     margin: 0;
@@ -62,4 +57,8 @@ p,
 button {
   margin: 0;
   padding: 0;
+}
+
+.body--no-scroll {
+  overflow: hidden;
 }
