--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -80,7 +80,7 @@
         }
 
         &::placeholder {
-          color: $c-gray;
+          color: $c-dark-gray;
         }
 
         &:not(:focus) {
