--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -39,6 +39,7 @@
       justify-content: center;
       font-size: 16px;
       font-weight: 500;
+      text-transform: uppercase;
       align-items: center;
       flex: 1;
       color: $c-black;
