--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -103,6 +103,24 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    transition: all, $transition-speed;
+
+    -webkit-mask-image: linear-gradient(
+      45deg,
+      #000 25%,
+      rgba(0, 0, 0, 0.2) 50%,
+      #000 75%
+    );
+    mask-image: linear-gradient(
+      45deg,
+      #000 25%,
+      rgba(0, 0, 0, 0.2) 50%,
+      #000 75%
+    );
+    -webkit-mask-size: 800%;
+    mask-size: 800%;
+    -webkit-mask-position: 0;
+    mask-position: 0;
 
     &--type--lecture {
       object-fit: cover;
@@ -113,6 +131,17 @@
         width: 100%;
         margin: 0;
       }
+    }
+
+    &:hover {
+      transition:
+        transform $scale-transition-speed ease,
+        mask-position 2s ease,
+        -webkit-mask-position 2s ease;
+      transform: scale(1.01);
+      -webkit-mask-position: 120%;
+      mask-position: 120%;
+      opacity: 1;
     }
   }
 
