--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -57,6 +57,35 @@
 
   @include on-desktop {
     background-position: center;
+    transition: all, $transition-speed;
+
+    -webkit-mask-image: linear-gradient(
+      45deg,
+      #000 25%,
+      rgba(0, 0, 0, 0.2) 50%,
+      #000 75%
+    );
+    mask-image: linear-gradient(
+      45deg,
+      #000 25%,
+      rgba(0, 0, 0, 0.2) 50%,
+      #000 75%
+    );
+    -webkit-mask-size: 800%;
+    mask-size: 800%;
+    -webkit-mask-position: 0;
+    mask-position: 0;
+
+    &:hover {
+      transition:
+        transform $scale-transition-speed ease,
+        mask-position 2s ease,
+        -webkit-mask-position 2s ease;
+      transform: scale(1.01);
+      -webkit-mask-position: 120%;
+      mask-position: 120%;
+      opacity: 1;
+    }
   }
 
   &--bg--1 {
