--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,11 @@
 @import './utils/blocks/performances';
 @import './utils/blocks/panorama';
 @import './utils/blocks/gallery';
+@import './utils/blocks/subscribe';
+@import './utils/blocks/footer';
+@import './utils//blocks/separator';
+@import './utils/blocks/nav';
+@import './utils/blocks/menu-open';
 
 * {
   margin: 0;
@@ -16,4 +21,6 @@
   text-decoration: none;
   box-sizing: border-box;
   list-style: none;
+  scroll-behavior: smooth;
+  scrollbar-color: $aside-background #fff;
 }
