--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,10 @@
 $bg-color: #fff;
 $t-color: #0f0e08;
+$menu-mask-color: #0f0e08;
+$menu-mask-color-active: #f14a27;
+$close-mask-color: #fff;
+$close-mask-color-active: #f14a27;
+$second-t-color: #fff;
 $g-color: #1a5a4c;
 $grey-color: #687480;
 $max-content: 1440px;
@@ -23,10 +28,16 @@ $t-header-min-height: 384px;
 $shedule-columns: 4;
 $d-space-between-sections: 200px;
 $t-space-between-sections: 88px;
-$m-space-between-sections: 70px;
-$m-space-between-sections-panoram: 100px;
+$m-space-between-sections-s: 70px;
+$m-space-between-sections-x: 100px;
 $green-text: #1a5a4c;
-$rect-back: #f14a27;
+$rect-bg: #f14a27;
 $details-text-color: #4e4e4e;
 $box-shadow-color: #1a5a4c40;
 $btn-no-active: #e0e0e0;
+$btn-active: #1a5a4c;
+$d-footer-pad-bottom: 35px;
+$m-footer-pad-bottom: 70px;
+$footer-pad-top: 50px;
+$separator-color: #1a5a4c80;
+$border-btn: #1a5a4c;
