--- a/src/styles/utils/blocks/header.scss
+++ b/src/styles/utils/blocks/header.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat($d-columns, 1fr);
     gap: $g-gap;
-    margin: 0 auto $d-space-between-sections;
+    margin: 0 auto;
 
     position: relative;
     max-width: $max-content-width;
@@ -34,6 +34,7 @@
     border: none;
     cursor: pointer;
     text-transform: uppercase;
+    @include on-hover-btn;
   }
 
   &__t-text {
@@ -106,7 +107,6 @@
       min-height: $t-header-min-height;
       position: relative;
       grid-template-columns: repeat($t-columns, 1fr);
-      margin-bottom: $t-space-between-sections;
     }
 
     &__l-container {
@@ -142,7 +142,6 @@
   .header {
     padding: 0;
     &__container {
-      margin-bottom: $m-space-between-sections;
       grid-template-columns: repeat($m-columns, 1fr);
       row-gap: 20px;
       grid-template-areas:
