--- a/src/styles/utils/blocks/icon.scss
+++ b/src/styles/utils/blocks/icon.scss
@@ -9,11 +9,18 @@
   }
 
   &--menu {
-    background-image: url(../images/icon/burger-menu.svg);
+    mask-image: url(../images/icon/burger-menu.png);
+    -webkit-mask-image: url(../images/icon/burger-menu.png);
+    background-color: $menu-mask-color;
+    @include on-action-hover(180deg);
   }
 
   &--close {
-    background-image: url(../images/icon/close.svg);
+    mask-image: url(../images/icon/close.svg);
+    -webkit-mask-image: url(../images/icon/close.svg);
+    background-color: $close-mask-color;
+
+    @include on-action-hover(90deg);
   }
 }
 
