--- a/src/styles/utils/blocks/page.scss
+++ b/src/styles/utils/blocks/page.scss
@@ -16,6 +16,10 @@
     padding-inline: $d-padding;
   }
 
+  &__section-space {
+    margin-bottom: $d-space-between-sections;
+  }
+
   &__menu {
     position: fixed;
     top: 0;
@@ -43,6 +47,10 @@
     &__container {
       padding-inline: $t-padding;
     }
+
+    &__section-space {
+      margin-bottom: $t-space-between-sections;
+    }
   }
 }
 
@@ -53,7 +61,15 @@
     }
 
     &__container {
-      padding-inline: 20px;
+      padding-inline: $m-padding;
+    }
+
+    &__section-space {
+      margin-bottom: $m-space-between-sections-x;
+    }
+
+    &__header-space-for-mobile {
+      margin-bottom: $m-space-between-sections-s;
     }
   }
 }
