--- a/src/styles/utils/blocks/performances.scss
+++ b/src/styles/utils/blocks/performances.scss
@@ -14,7 +14,6 @@
     grid-column: 1 / 8;
     width: 100%;
     max-height: 520px;
-
   }
 
   &__description {
@@ -52,7 +51,7 @@
   &__event-rect {
     width: 10px;
     height: 10px;
-    background-color: $rect-back;
+    background-color: $rect-bg;
     align-self: center;
   }
 
