--- a/src/styles/utils/blocks/schedule.scss
+++ b/src/styles/utils/blocks/schedule.scss
@@ -1,12 +1,21 @@
 .schedule {
-  display: grid;
-  grid-template-columns: repeat($shedule-columns, 1fr);
-  column-gap: $g-gap;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+
   &__title {
-    grid-column: 1 / -1;
+    font-size: 14px;
+    font-weight: inherit;
+    line-height: 20px;
+    margin-bottom: 20px;
   }
 
   &__list {
-    grid-column: 2 span;
+  }
+
+  &__text {
+    &--bold {
+      font-weight: 600;
+    }
   }
 }
