--- a/src/styles/utils/blocks/menu.scss
+++ b/src/styles/utils/blocks/menu.scss
@@ -16,9 +16,6 @@
 
   &__nav {
     grid-column: 1 / 6;
-    justify-self: center;
-    column-count: 2;
-    column-gap: 90px;
     font-weight: 500;
     font-size: 22px;
     line-height: 22px;
@@ -27,40 +24,23 @@
   &__item {
     width: max-content;
     &:nth-child(odd) {
-      padding-bottom: 30px;
+      margin-bottom: 30px;
     }
+
+    @include link-hover;
   }
 
   &__link {
     color: inherit;
   }
 
-  &__devider {
+  &__separator {
     grid-column: 7;
-    height: 145px;
-    border-left: 1px solid #fff;
   }
 
   &__schedule {
     grid-column: 8 / 10;
     width: max-content;
-  }
-
-  &__shedule-title {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    margin-bottom: 20px;
-  }
-
-  &__schedule-item {
-    font-weight: 400;
-  }
-
-  &__t-bold {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 21px;
   }
 
   &__schedule-describe {
@@ -94,13 +74,10 @@
       line-height: 16px;
       column-gap: 20px;
       grid-column: 2 / 5;
-      justify-self: flex-start;
     }
 
-    &__devider {
+    &__separator {
       grid-column: 6;
-      margin-left: auto;
-      margin-right: auto;
     }
 
     &__item {
@@ -135,11 +112,8 @@
       padding-inline: $m-padding;
     }
 
-    &__devider {
+    &__separator {
       grid-column: 1 / -1;
-      width: 100%;
-      height: 0;
-      border-bottom: 1px solid #fff;
       margin-bottom: 24px;
     }
 
