--- a/src/styles/utils/blocks/header.scss
+++ b/src/styles/utils/blocks/header.scss
@@ -88,6 +88,7 @@
     background-image: url(../images/museum.jpg);
     background-repeat: no-repeat;
     z-index: -1;
+    background-size: cover;
   }
 
   &__bg-t {
