--- a/src/styles/utils/blocks/subscribe.scss
+++ b/src/styles/utils/blocks/subscribe.scss
@@ -51,6 +51,21 @@
     padding-left: 32px;
   }
 
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    border: 2px solid $g-color;
+    -webkit-text-fill-color: $g-color;
+    -webkit-box-shadow: 0 0 0 1000px $bg-color inset;
+    transition: background-color 5000s ease-in-out 0s;
+  }
+
   &__submit-btn {
     background-color: $rect-bg;
     width: 70px;
