add task solution

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -116,6 +116,7 @@
       line-height: 21px;
       text-decoration: none;
       color: #000;
+      @include hover(transform, scale(1.05));
     }
   }
 
