--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -137,6 +137,8 @@
       width: 230px;
       height: 50px;
       border: 1px solid #1A5A4C;
+      background-color: #fff;
+      cursor: pointer;
       
 
       @include onTablet {
@@ -154,6 +156,7 @@
       align-items: center;
       justify-content: center;
       border: 1px solid #1A5A4C;
+      cursor: pointer;
 
       @include onTablet {
         width: 70px;
