--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,3 +1,19 @@
+.subscription__input:-webkit-autofill,
+.subscription__input:-webkit-autofill:hover,
+.subscription__input:-webkit-autofill:focus,
+.subscription__input:-webkit-autofill:active {
+  font-family: Poppins, sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 22.5px;
+  color: #fff;
+  background-color: #2C2C2C;
+  border: none;
+  -webkit-text-fill-color: #fff;
+  -webkit-box-shadow: 0 0 0px 1000px #2C2C2C inset;
+}
+
+
 .subscription {
   @include pageGrid;
   margin-top: 100px;
@@ -86,7 +102,7 @@
     width: 24px;
     height: 24px;
     border: none;
-    
+    cursor: pointer;
     
 
     &-wrapper {
@@ -96,6 +112,7 @@
       width: 50px;
       height: 100%;
       background-color: #F14A27;
+      cursor: pointer;
       @include hover(transform, scale(1.1));
       
 
