--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -2,15 +2,9 @@
 .subscription__input:-webkit-autofill:hover,
 .subscription__input:-webkit-autofill:focus,
 .subscription__input:-webkit-autofill:active {
-  font-family: Poppins, sans-serif;
-  font-size: 15px;
-  font-weight: 600;
-  line-height: 22.5px;
-  color: #fff;
-  background-color: #2C2C2C;
   border: none;
-  -webkit-text-fill-color: #fff;
-  -webkit-box-shadow: 0 0 0px 1000px #2C2C2C inset;
+  -webkit-text-fill-color: #000;
+  background-color: #fff;
 }
 
 
@@ -92,6 +86,11 @@
     padding: 0;
     padding-left: 24px;
     box-sizing: border-box;
+
+    &:focus {
+      outline: none;
+      
+    }
   }
 
   &__button {
