add task solution

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -2,7 +2,7 @@ body {
   overflow: auto;
 
   &.no-scroll {
-      overflow: hidden;
+    overflow: hidden;
   }
 }
 
@@ -24,7 +24,7 @@ body {
 
 .aside {
   z-index: 2;
-  background-color: #1A5A4C;
+  background-color: #1a5a4c;
   opacity: 0;
   pointer-events: none;
   position: fixed;
@@ -32,8 +32,9 @@ body {
   left: 0;
   right: 0;
   transform: translateY(-100%);
-  transition: opacity 0.3s ease, transform 0.3s ease;
-  
+  transition:
+    opacity 0.3s ease,
+    transform 0.3s ease;
 
   &:target {
     opacity: 1;
@@ -49,7 +50,7 @@ body {
     display: flex;
     align-items: flex-start;
     padding-top: 27px;
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
 
     @include onTablet {
       grid-column: 1 / 4;
@@ -84,7 +85,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding-bottom: 24px;
-    
+
     @include onDesktop {
       gap: 31px;
     }
@@ -116,9 +117,9 @@ body {
   }
 
   &__line {
-    border: 1px solid #FFFFFF80;
+    border: 1px solid #ffffff80;
     width: auto;
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
 
     @include onTablet {
       transform: rotate(-90deg);
@@ -134,20 +135,19 @@ body {
   }
 
   &__container-schedule {
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
 
     @include onTablet {
       grid-column: 4 / 7;
     }
 
-    @include onTablet {
+    @include onDesktop {
       grid-column: 8 / 13;
     }
   }
 }
 
 .schedule {
-
   &__wrapper {
     display: flex;
     flex-direction: column;
@@ -207,7 +207,7 @@ body {
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
-    
+
     color: #fff;
   }
 }
