--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -22,7 +22,7 @@
       gap: 104px;
     }
   }
-  
+
   &__title {
     font-family: Montserrat, sans-serif;
     font-size: 36px;
@@ -63,7 +63,7 @@
   }
 
   &__description {
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
 
     @include onDesktop {
       grid-column: 9 / -1;
@@ -101,10 +101,10 @@
   }
 
   &__date {
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
     line-height: 24px;
-    color: #1A5A4C;
+    color: #1a5a4c;
   }
 
   &__name-wrapper {
@@ -123,7 +123,6 @@
     font-family: Montserrat, sans-serif;
     font-size: 28px;
     line-height: 28px;
-
   }
 
   &__name-img {
@@ -136,7 +135,7 @@
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
     line-height: 24px;
-    color: #4E4E4E;
+    color: #4e4e4e;
     grid-column: 1 / -1;
 
     @include onTablet {
