--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -57,13 +57,12 @@
       padding: 0;
     }
 
-    @include onDesktop{
+    @include onDesktop {
       grid-column: 3 / 5;
-      
     }
 
     &__title {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 19.69px;
@@ -76,7 +75,7 @@
     }
 
     &__item {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 21px;
@@ -92,12 +91,12 @@
       padding: 0;
     }
 
-    @include onDesktop{
+    @include onDesktop {
       grid-column: 5 / 7;
     }
 
     &__title {
-      font-family: IBM Plex Sans;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 19.69px;
@@ -110,7 +109,7 @@
     }
 
     &__link {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 21px;
@@ -127,20 +126,22 @@
       padding-bottom: 64px;
     }
 
-    @include onDesktop{
+    @include onDesktop {
       grid-column: 3 / 5;
     }
 
     &__content {
-      font-family: IBM Plex Sans, sans-serif;
+      font-family:
+        IBM Plex Sans,
+        sans-serif;
       font-size: 14px;
       font-weight: 400;
-      line-height: 21px;     
+      line-height: 21px;
     }
   }
 
   &__button {
-    border: 1px solid #1A5A4C;
+    border: 1px solid #1a5a4c;
     width: 50px;
     height: 50px;
     display: flex;
@@ -152,13 +153,12 @@
       display: flex;
       justify-content: flex-end;
       grid-column: 1 / -1;
-      padding-bottom:  20px;
+      padding-bottom: 20px;
 
       @include onTablet {
         display: none;
       }
     }
-    
 
     &-link {
       background-image: url(../images/footer/button.png);
@@ -171,11 +171,11 @@
   }
 
   &__line {
-    border: 1px solid #1A5A4C80;
+    border: 1px solid #1a5a4c80;
     width: auto;
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
 
-    @include onDesktop{
+    @include onDesktop {
       transform: rotate(-90deg);
       position: absolute;
       width: 260px;
@@ -196,7 +196,7 @@
       padding-top: 64px;
     }
 
-    @include onDesktop{
+    @include onDesktop {
       padding: 0;
     }
   }
@@ -226,12 +226,11 @@
   }
 
   &__link {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 14px;
     font-weight: 400;
     text-decoration: none;
     color: #000;
-    
   }
 
   &__item {
@@ -258,7 +257,7 @@
   }
 
   &__content {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 12px;
     line-height: 16.88px;
   }
