--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,4 @@
 .header {
-  
   position: relative;
   @include pageGrid;
 
@@ -10,7 +9,6 @@
   @include onDesktop {
     height: 655px;
   }
-  
 
   &-background {
     height: 300px;
@@ -110,9 +108,8 @@
     justify-content: center;
     padding-top: 20px;
     grid-column: 1 / -1;
-    
+
     @include hover(transform, scale(1.05));
-    
 
     @include onTablet {
       padding-top: 38px;
@@ -136,10 +133,9 @@
       text-transform: uppercase;
       width: 230px;
       height: 50px;
-      border: 1px solid #1A5A4C;
+      border: 1px solid #1a5a4c;
       background-color: #fff;
       cursor: pointer;
-      
 
       @include onTablet {
         width: 200px;
@@ -151,11 +147,11 @@
       width: 50px;
       height: 50px;
       position: relative;
-      background-color: #1A5A4C;
+      background-color: #1a5a4c;
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 1px solid #1A5A4C;
+      border: 1px solid #1a5a4c;
       cursor: pointer;
 
       @include onTablet {
@@ -164,7 +160,7 @@
       }
 
       &::before {
-        content: "";
+        content: '';
         position: absolute;
         width: 24px;
         height: 24px;
@@ -191,10 +187,10 @@
   @include onDesktop {
     display: flex;
   }
-} 
+}
 
 .event__line {
-  border: 1px solid #1A5A4C;
+  border: 1px solid #1a5a4c;
   width: 70px;
 }
 
