--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -7,7 +7,6 @@
   background-color: #fff;
 }
 
-
 .subscription {
   @include pageGrid;
   margin-top: 100px;
@@ -66,7 +65,6 @@
     align-items: center;
     height: 50px;
     justify-content: center;
-    
 
     @include onTablet {
       padding-top: 64px;
@@ -89,7 +87,6 @@
 
     &:focus {
       outline: none;
-      
     }
   }
 
@@ -97,12 +94,11 @@
     background-image: url(../images/subscription/button.png);
     background-size: cover;
     background-position: center;
-    background-color: #F14A27;
+    background-color: #f14a27;
     width: 24px;
     height: 24px;
     border: none;
     cursor: pointer;
-    
 
     &-wrapper {
       display: flex;
@@ -110,10 +106,9 @@
       justify-content: center;
       width: 50px;
       height: 100%;
-      background-color: #F14A27;
+      background-color: #f14a27;
       cursor: pointer;
       @include hover(transform, scale(1.1));
-      
 
       @include onTablet {
         width: 70px;
