--- a/src/styles/blocks/advert.scss
+++ b/src/styles/blocks/advert.scss
@@ -26,8 +26,6 @@
       padding-top: 104px;
     }
   }
-
-  
 }
 
 .advert {
@@ -40,7 +38,7 @@
     width: 280px;
     background-color: #fff;
     transform: translateY(-40%);
-    box-shadow: 0px 2px 0px 0px #1A5A4C40;
+    box-shadow: 0px 2px 0px 0px #1a5a4c40;
 
     @include onTablet {
       width: 570px;
@@ -80,7 +78,7 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
-    color: #1A5A4C;
+    color: #1a5a4c;
   }
 
   &__title {
