--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -22,18 +22,16 @@
     @include onTablet {
       text-align: left;
     }
-
   }
 
   &-container {
     position: relative;
     overflow: hidden;
-    
   }
 
   &-wrapper {
     display: flex;
-    transition: transform 0.5s ease-in-out; 
+    transition: transform 0.5s ease-in-out;
 
     @include onTablet {
       width: 50%;
@@ -54,7 +52,6 @@
     height: 100%;
     object-fit: cover;
     display: block;
-
   }
 
   &-nav {
@@ -70,7 +67,6 @@
     }
   }
 }
-
 
 .slide {
   flex: 0 0 100%;
@@ -105,7 +101,7 @@
   }
 }
 
-input[type="radio"] {
+input[type='radio'] {
   display: none;
 
   &:checked + .slider-wrapper {
@@ -126,19 +122,19 @@ input[type="radio"] {
 }
 
 @include onDesktop {
-  input[type="radio"]:nth-of-type(2):checked ~ .slider-wrapper,
-  input[type="radio"]:nth-of-type(3):checked ~ .slider-wrapper,
-  input[type="radio"]:nth-of-type(4):checked ~ .slider-wrapper {
+  input[type='radio']:nth-of-type(2):checked ~ .slider-wrapper,
+  input[type='radio']:nth-of-type(3):checked ~ .slider-wrapper,
+  input[type='radio']:nth-of-type(4):checked ~ .slider-wrapper {
     transform: none;
   }
 }
 
 #slide1:checked ~ .slider-nav .nav-dot:nth-child(1),
-  #slide2:checked ~ .slider-nav .nav-dot:nth-child(2),
-  #slide3:checked ~ .slider-nav .nav-dot:nth-child(3),
-  #slide4:checked ~ .slider-nav .nav-dot:nth-child(4) {
-    background-color: #333;
-  }
+#slide2:checked ~ .slider-nav .nav-dot:nth-child(2),
+#slide3:checked ~ .slider-nav .nav-dot:nth-child(3),
+#slide4:checked ~ .slider-nav .nav-dot:nth-child(4) {
+  background-color: #333;
+}
 
 .slide1 {
   grid-column: 1 / -1;
