--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -99,7 +99,10 @@
 
 @mixin on-hover-btn {
   @include transition-page;
+
   &:hover {
+    background-color: red;
+
     @include transition-page;
 
     transform: translateX(5%);
