--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,7 +5,6 @@ $menu-mask-color-active: #f14a27;
 $close-mask-color: #fff;
 $close-mask-color-active: #f14a27;
 $second-t-color: #fff;
-$g-color: #1a5a4c;
 $grey-color: #687480;
 $max-content: 1440px;
 $t-max-width: 1279px;
@@ -41,3 +40,5 @@ $m-footer-pad-bottom: 70px;
 $footer-pad-top: 50px;
 $separator-color: #1a5a4c80;
 $border-btn: #1a5a4c;
+$second-back-color: #1a5a4c;
+
