--- a/src/styles/utils/blocks/subscribe.scss
+++ b/src/styles/utils/blocks/subscribe.scss
@@ -60,8 +60,8 @@
   select:-webkit-autofill,
   select:-webkit-autofill:hover,
   select:-webkit-autofill:focus {
-    border: 2px solid $g-color;
-    -webkit-text-fill-color: $g-color;
+    border: 2px solid $green-text;
+    -webkit-text-fill-color: $green-text;
     -webkit-box-shadow: 0 0 0 1000px $bg-color inset;
     transition: background-color 5000s ease-in-out 0s;
   }
