add header, menu and hero

--- a/src/styles/components/btn.scss
+++ b/src/styles/components/btn.scss
@@ -3,9 +3,9 @@
   box-sizing: border-box;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1;
   line-height: 100%;
   text-transform: uppercase;
+  width: 280px;
   padding: 18px 130px 18px 80px;
   border: 1px solid $color-accent;
   position: relative;
@@ -41,7 +41,7 @@
     }
   }
 
-  @media (min-width: $tablet-width) {
+  @include onTablet {
     padding: 27px 138px 27px 68px;
 
     &::before {
