--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,7 @@
+$tablet-min-width: 768px;
+$desktop-min-width: 1260px;
+
 $color-light: #fff;
 $color-dark: #0F0E08;
 $color-accent: #1A5A4C;
-$tablet-width: 768px;
-$desktop-width: 1280px;
+
