--- a/src/styles/components/icon.scss
+++ b/src/styles/components/icon.scss
@@ -6,21 +6,23 @@
   background-position: center;
   background-size: cover;
 
-  @media (min-width: $desktop-width) {
-    @include basic-interactive-styles;
-  }
+  // @include onDesktop {
+  //   @include basic-interactive-styles;
+  // }
 
   &--burger {
     background-image: url(../images/icons/icon-burger.svg);
 
-    // &:hover {
-    //   background-image: url(../images/icons/icon-burger-hover.svg);
-    // }
+    &:hover {
+      background-image: url(../images/icons/icon-burger-hover.svg);
+    }
   }
 
   &--close {
     background-image: url(../images/icons/icon-close.svg);
 
-    @include basic-interactive-styles($color-light);
+    // @include onDesktop {
+    //   @include basic-interactive-styles($color-light);
+    // }
   }
 }
