--- a/src/styles/components/page.scss
+++ b/src/styles/components/page.scss
@@ -3,7 +3,7 @@
   scroll-behavior: smooth;
   background: $color-light;
 
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
   font-weight: 300;
   font-size: 16px;
   line-height: 150%;
@@ -22,8 +22,7 @@
     opacity: 0;
     transform: translateX(-100%);
     pointer-events: none;
-    transition: opacity 0.5s,
-                transform 0.5s;
+    transition: opacity 0.5s, transform 0.5s;
   }
 
   &__menu:target {
@@ -35,32 +34,4 @@
   &:has(.page__menu:target) {
     overflow: hidden;
   }
-}
-
-.container {
-  padding: 0 20px;
-
-  @media (min-width: $tablet-width) {
-    max-width: 690px;
-    padding: 0;
-    margin: 0 auto;
-  }
-
-  @media (min-width: $desktop-width) {
-    max-width: 1170px;
-    padding: 0;
-  }
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
