--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -41,4 +41,6 @@ $footer-pad-top: 50px;
 $separator-color: #1a5a4c80;
 $border-btn: #1a5a4c;
 $second-back-color: #1a5a4c;
-
+$social-default-color: #0f0e08;
+$facebook-active: #0866ff;
+$instagram-active: #fb0060;
