--- a/src/styles/utils/blocks/footer.scss
+++ b/src/styles/utils/blocks/footer.scss
@@ -32,6 +32,26 @@
   &__icon {
     width: 24px;
     height: 24px;
+    display: block;
+    background-color: $social-default-color;
+
+    &--facebook {
+      -webkit-mask-image: url(../images/icon/facebook.svg);
+      mask-image: url(../images/icon/facebook.svg);
+
+      &:hover {
+        background-color: $facebook-active;
+      }
+    }
+
+    &--instagram {
+      -webkit-mask-image: url(../images/icon/instagram.svg);
+      mask-image: url(../images/icon/instagram.svg);
+
+      &:hover {
+        background-color: $instagram-active;
+      }
+    }
 
     &:first-child {
       margin-right: 22px;
