--- a/src/styles/utils/blocks/performances.scss
+++ b/src/styles/utils/blocks/performances.scss
@@ -4,6 +4,8 @@
   }
 
   &__container {
+    @include on-hover-img;
+
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     column-gap: $g-gap;
